After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 754783 - ges-launch: crash when argument is invalid
ges-launch: crash when argument is invalid
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-editing-services
git master
Other Linux
: Normal normal
: 1.5.91
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-09-09 14:40 UTC by Justin Kim
Modified: 2015-09-09 14:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix double free (804 bytes, patch)
2015-09-09 14:41 UTC, Justin Kim
committed Details | Review

Description Justin Kim 2015-09-09 14:40:30 UTC
If argument is not correct, ges-launch releases GOptionContext twice.

How to reproduce:

$ ges-launch-1.0 -t
Error initializing: Missing argument for -t
*** Error in `ges-launch-1.0': double free or corruption (fasttop): 0x000000000260bde0 ***
Aborted
Comment 1 Justin Kim 2015-09-09 14:41:05 UTC
Created attachment 310988 [details] [review]
fix double free
Comment 2 Thibault Saunier 2015-09-09 14:51:39 UTC
commit 32c694cc0091d25b9e2dc7a547d6f83a686e7203
Author: Justin Kim <justin.kim@collabora.com>
Date:   Wed Sep 9 23:32:19 2015 +0900

    ges-launcher: fix double free when argument is invalid
    
    https://bugzilla.gnome.org/show_bug.cgi?id=754783