ges-launcher: fix double free when argument is invalid

https://bugzilla.gnome.org/show_bug.cgi?id=754783